# libximecore

./: Cargo.toml  LICENSE
crates/librime/: Cargo.toml
crates/librime-sys2/: Cargo.toml  build.rs
crates/librime-sys2/src/: lib.rs
crates/librime/src/: commit.rs  context.rs  error.rs  key.rs  levers.rs  lib.rs  session.rs  status.rs  traits.rs
crates/xime-config/: Cargo.toml
crates/xime-config/src/: lib.rs  rime_deploy.rs  schema_config.rs  schema_manager.rs  smart_suggestion.rs  style.rs  wubi_radicals.rs
crates/xime-ipc/: Cargo.toml
crates/xime-ipc/src/: client.rs  lib.rs  messages.rs
crates/xime-rime/: Cargo.toml
crates/xime-rime/src/: engine.rs  lib.rs
crates/xime-setup/: Cargo.toml
crates/xime-setup/src/: lib.rs  main.rs  state.rs  theme.rs  webdav.rs
crates/xime-setup/src/components/: button.rs  dropdown.rs  kbd.rs  label.rs  mod.rs  number_input.rs  radio.rs  settings.rs  switch.rs  text_input.rs  title_bar.rs
crates/xime-setup/src/pages/: about.rs  appearance.rs  clipboard.rs  dictionary.rs  hotkeys.rs  input_schema.rs  mod.rs  pair.rs  smart_suggestion.rs  sync.rs
crates/ximed/: AGENTS.md  Cargo.toml  README.md
crates/ximed/docs/apis/: README.md  bruno.json
crates/ximed/docs/apis/Clipboard/: Clipboard Read.bru  Clipboard Write.bru
crates/ximed/docs/apis/Health/: Health Check.bru
crates/ximed/docs/apis/Pairing/: Pair Confirm.bru  Pair List.bru  Pair Remove.bru  Pair Request.bru  Pair Status.bru
crates/ximed/docs/apis/environments/: local.bru
crates/ximed/examples/: base.rs
crates/ximed/src/: auth.rs  error.rs  lib.rs  pair_store.rs  platform.rs  router.rs  server.rs  state.rs  types.rs
crates/ximed/src/handlers/: clipboard.rs  health.rs  mod.rs  pair.rs
resources/: xime.yaml
