[workspace]
resolver = "2"
members = [
    "crates/librime-sys2",
    "crates/librime",
    "crates/xime-config",
    "crates/xime-rime",
    "crates/xime-ipc",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
once_cell = "1"
