[package]
name = "librime-sys2"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raw FFI bindings to librime (cross-platform)"
repository.workspace = true
links = "rime"
exclude = ["/target"]

[lib]
name = "librime_sys2"

[build-dependencies]
pkg-config = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
