[package]
name = "librime"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Safe Rust bindings to librime (cross-platform)"
repository = "https://github.com/ximeiorg/libximecore"

[dependencies]
librime-sys2 = { version = "0.1.0", path = "../librime-sys2" }
thiserror = "2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }
