[package]
name = "librime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Safe Rust bindings to librime (cross-platform)"
repository.workspace = true

[dependencies]
librime-sys2 = { path = "../librime-sys2" }
thiserror.workspace = true
once_cell.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_Input_KeyboardAndMouse"] }
