[package]
name = "xime-config"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Xime input method configuration model and utilities"
repository = "https://github.com/ximeiorg/libximecore"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
librime = { version = "0.1.0", path = "../librime" }
once_cell.workspace = true
thiserror.workspace = true
