[package]
name = "xime-config"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Xime input method configuration model and utilities"
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
librime = { path = "../librime" }
once_cell.workspace = true
thiserror.workspace = true
