[package]
name = "xime-ipc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Xime IPC message types and DaemonClient trait"
repository = "https://github.com/ximeiorg/libximecore"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait = "0.1"
