[package]
name = "xime-setup"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Xime input method setup GUI"
repository = "https://github.com/ximeiorg/libximecore"

[dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["wayland", "font-kit"] }
xime-config = { version = "0.1.0", path = "../xime-config" }
xime-ipc = { version = "0.1.0", path = "../xime-ipc" }
anyhow = "1.0"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
tracing.workspace = true
unicode-segmentation = "1.12"

# Linux-specific
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
nix = { version = "0.31", features = ["fs"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Windows-specific
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading"] }
ureq = "3.3"
smol = "2"
raw-window-handle = "0.6"

[features]
default = []
smart-suggestion-page = []
pair-page = []
clipboard-page = []
