[package]
name = "xime-setup-lib"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Xime input method setup GUI library (platform-agnostic)"
repository = "https://github.com/ximeiorg/libximecore"

[lib]
name = "xime_setup_lib"

[dependencies]
gpui = { version = "0.2.2", default-features = false, features = ["wayland", "font-kit"] }
xime-config = { version = "0.1.0", path = "../xime-config" }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
tracing.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
anyhow = "1.0"

[features]
default = []
smart-suggestion-page = []
pair-page = []
clipboard-page = []
