[package]
name = "xime-setup-lib"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Xime input method setup GUI library (platform-agnostic)"
repository.workspace = true

[lib]
name = "xime_setup_lib"

[dependencies]
# gpui = { version = "0.2.2", default-features = false, features = [
#     "wayland",
#     "font-kit",
# ] }
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit","wayland"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
xime-config = { path = "../xime-config" }
serde = { workspace = true, features = ["derive"] }
serde_yaml.workspace = true
tracing.workspace = true
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
anyhow = "1.0"

[features]
default = []
smart-suggestion-page = []
pair-page = []
clipboard-page = []
