[package]
name = "ximed"
version = "0.1.0"
edition = "2021"
authors = ["kor1 <kingzcheung@gmail.com>"]
license = "GPL-3.0-or-later"

[features]
default = ["linux"]
linux = ["arboard/wayland-data-control"]
windows = []

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2"
anyhow ="1"
tracing = "0.1.44"
sha2 = "0.11.0"
hmac = "0.13.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3.6.1", optional = true }