[package]
name = "ximed"
version.workspace = true
edition.workspace = true
authors = ["kor1 <kingzcheung@gmail.com>"]
license.workspace = true

[features]
default = ["linux"]
linux = ["arboard/wayland-data-control"]
windows = []

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow = "1"
tracing.workspace = true
sha2 = "0.11.0"
hmac = "0.13.0"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
arboard = { version = "3.6.1", optional = true }
